--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <img src="images/suzy-1.jpg">
+    <img src="images/suzy-2.jpg">
+    <img src="images/suzy-3.jpg">
+    <img src="images/suzy-4.jpg">
+    
     <script src="js/app.js"></script>
 </body>
 </html>
